--- a/app/src/main/res/layout/item_show_off.xml
+++ b/app/src/main/res/layout/item_show_off.xml
@@ -80,10 +80,11 @@
             <TextView
                 android:textSize="@dimen/text_size_very_small"
                 android:id="@+id/product_off_price"
-                android:gravity="end"
+                android:gravity="start"
+                android:textColor="@color/green"
                 android:layout_width="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_weight=".3"
+                android:layout_marginStart="@dimen/standard_margin"
+                android:layout_weight=".9"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="3dp"
                 tools:text="5000" />
