--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,10 +9,14 @@
     <color name="colorPrimaryDarkForNavigation">#D9750450</color>
     <color name="nav_background">#BF232524</color>
     <color name="gray">#585858</color>
+    <color name="gray_light">#D1D0D0</color>
     <color name="small_lines_background">#40292424</color>
     <color name="red">#9C0707</color>
     <color name="light_blue">#07909C</color>
     <color name="dark_blue">#04356F</color>
     <color name="pink">#C40970</color>
+    <color name="bg_for_itemshow">#ffffff</color>
+    <color name="gray_light_for_bg_itemshow">#DADADA</color>
+    <color name="gray_light_for_bg_activity">#DADADA</color>
 
 </resources>
