--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layoutDirection="rtl"
+        android:background="@color/gray_light_for_bg_activity"
         tools:context=".Activities.MainActivity"
         tools:showIn="@layout/toolbar_main"
         xmlns:custom="http://schemas.android.com/apk/res-auto">
@@ -65,6 +66,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:id="@+id/specialOffers_lable"
             android:layout_height="match_parent">
             <View
                 android:layout_width="2dp"
@@ -124,7 +126,7 @@
             android:layoutDirection="rtl"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
-            android:id="@+id/categoryList">
+            android:id="@+id/recycler_categoryList_main_activity">
         </android.support.v7.widget.RecyclerView>
 
 
@@ -182,7 +184,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginStart="4dp"
                 android:layout_marginBottom="12dp"
-                android:text="@string/products"
+                android:text="@string/only_in_samed"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 />
@@ -194,7 +196,7 @@
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:layout_marginBottom="8dp"
-            android:id="@+id/productList">
+            android:id="@+id/recycler_only">
         </android.support.v7.widget.RecyclerView>
 
         <LinearLayout
@@ -225,6 +227,37 @@
             android:layout_marginBottom="8dp"
             android:id="@+id/recycler_most_visited">
         </android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <View
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:background="#272727"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="12dp"
+                android:text="@string/most_sold"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                />
+        </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layoutDirection="rtl"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/recycler_most_sold">
+        </android.support.v7.widget.RecyclerView>
+
+
 
 
 
