--- a/app/src/main/res/layout/item_show_basket.xml
+++ b/app/src/main/res/layout/item_show_basket.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,10 +7,12 @@
     android:layout_marginStart="16dp"
     app:cardElevation="8dp"
     android:layout_marginTop="5dp"
+    android:background="@color/bg_for_itemshow"
     android:layout_marginBottom="5dp"
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:elevation="@dimen/standard_elevation">
+    android:elevation="@dimen/standard_elevation"
+    tools:targetApi="lollipop">
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,7 +28,7 @@
             <ImageView
                 android:layout_width="0dp"
                 android:id="@+id/imgbasket"
-                tools:src="@drawable/side_nav_bar"
+                tools:src="@drawable/banner4"
                 android:scaleType="centerInside"
                 android:layout_height="match_parent"
                 android:layout_weight=".5"/>
@@ -49,23 +50,23 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginRight="@dimen/large_margin"
-                    android:layout_marginLeft="@dimen/large_margin"
-                    android:background="@color/small_lines_background"/>
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:background="#40292424"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:textSize="@dimen/text_size_small"
                     android:layout_marginStart="@dimen/standard_margin"
                     android:gravity="center_vertical|start"
-                    android:text="@string/numbers"
-                    android:layout_marginTop="@dimen/standard_margin"
+                    android:text="@string/number"
+                    android:layout_marginTop="5dp"
                     android:layout_height="0dp"
                     android:layout_weight=".2"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:textSize="@dimen/text_size_small"
                     android:id="@+id/txtnumberbasket"
-                    android:layout_marginStart="@dimen/standard_margin"
+                    android:layout_marginStart="8dp"
                     android:gravity="center_vertical|start"
                     tools:text="5 "
                     android:layout_height="0dp"
@@ -73,9 +74,9 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginRight="@dimen/large_margin"
-                    android:layout_marginLeft="@dimen/large_margin"
-                    android:background="@color/small_lines_background"/>
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:background="#40292424"/>
             </LinearLayout>
 
 
@@ -89,15 +90,15 @@
                 android:layout_width="0dp"
                 android:gravity="center_vertical|start"
                 android:layout_marginStart="@dimen/large_margin"
-                android:text="@string/price"
+                android:text="@string/product_price"
                 android:layout_height="match_parent"
                 android:layout_weight=".5"/>
             <TextView
                 android:layout_width="0dp"
                 android:gravity="center_vertical|start"
                 android:id="@+id/txtpricebasket"
-                android:layout_marginStart="@dimen/standard_margin"
-                android:textColor="@color/red"
+                android:layout_marginStart="5dp"
+                android:textColor="#9E0E0E"
                 tools:text="2000000"
                 android:layout_height="match_parent"
                 android:layout_weight=".5"/>
@@ -105,9 +106,9 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginRight="@dimen/large_margin"
-            android:layout_marginLeft="@dimen/large_margin"
-            android:background="@color/small_lines_background"/>
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:background="#40292424"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -116,7 +117,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:gravity="center_vertical|start"
-                android:text="@string/totalprice"
+                android:text="@string/totallprice"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/large_margin"
                 android:layout_weight=".5"/>
@@ -125,7 +126,7 @@
                 android:gravity="center_vertical|start"
                 android:layout_marginStart="5dp"
                 android:id="@+id/txtpricetotalbasket"
-                android:textColor="@color/green"
+                android:textColor="#409E0E"
                 tools:text="2000000"
                 android:layout_height="match_parent"
                 android:layout_weight=".5"/>
@@ -133,20 +134,20 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginRight="@dimen/large_margin"
-            android:layout_marginLeft="@dimen/large_margin"
-            android:background="@color/small_lines_background"/>
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:background="#40292424"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.13"
+            android:layout_weight="0.15"
             android:id="@+id/txtdeletefrombasket"
             android:text="@string/delete"
             android:gravity="center_vertical|end"
-            android:layout_marginEnd="@dimen/standard_margin"
+            android:layout_marginEnd="8dp"
             android:textSize="@dimen/text_size_small"
-            android:paddingBottom="@dimen/standard_margin"
-            android:textColor="@color/red"/>
+            android:paddingBottom="5dp"
+            android:textColor="#9E0E0E"/>
 
 
     </LinearLayout>
