--- a/app/src/main/res/layout/item_show_product.xml
+++ b/app/src/main/res/layout/item_show_product.xml
@@ -4,9 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="170dp"
-    android:id="@+id/cardview_mostvisit"
+    android:background="@color/bg_for_itemshow"
+    android:id="@+id/cardview_product"
     android:layout_height="200dp"
-    android:layout_margin="8dp"
+    android:layout_margin="@dimen/standard_margin"
     android:layoutDirection="rtl"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp">
@@ -17,12 +18,34 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/img_product_mostvisit"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            tools:src="@drawable/side_nav_bar"
-            android:scaleType="centerInside"/>
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/img_product"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                tools:src="@drawable/side_nav_bar"
+                android:scaleType="centerInside"/>
+
+            <jp.shts.android.library.TriangleLabelView
+                android:id="@+id/triangle_product"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                app:backgroundColor="#D83000"
+                app:corner="leftTop"
+                app:labelBottomPadding="6dp"
+                app:labelCenterPadding="5sp"
+                app:labelTopPadding="15dp"
+                app:primaryText="تخفیف"
+                app:primaryTextColor="@color/yellow"
+                app:primaryTextSize="8sp"
+                app:secondaryText="20%"
+                app:secondaryTextColor="@color/black"
+                app:secondaryTextSize="10sp" />
+        </RelativeLayout>
 
 
         <RelativeLayout
@@ -37,7 +60,7 @@
                 />
 
             <TextView
-                android:id="@+id/product_name_mostvisit"
+                android:id="@+id/txt_title_product"
                 android:textSize="@dimen/text_size_very_small"
                 android:layout_marginTop="@dimen/small_margin"
                 android:layout_toEndOf="@id/vieww"
@@ -45,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/standard_margin"
-                tools:text="نخل و نارنج " />
+                tools:text="ماجرای فکری آوینی" />
 
         </RelativeLayout>
 
@@ -58,8 +81,9 @@
             android:orientation="horizontal">
             <TextView
                 android:textSize="@dimen/text_size_very_small"
-                android:id="@+id/product_price_mostvisit"
+                android:id="@+id/txt_price_product"
                 android:gravity="start"
+                android:textColor="@color/green"
                 android:layout_width="0dp"
                 android:layout_marginStart="@dimen/standard_margin"
                 android:layout_weight=".5"
@@ -79,7 +103,7 @@
                     android:layout_height="20dp" />
                 <TextView
                     android:layout_width="20dp"
-                    android:id="@+id/number_visit"
+                    android:id="@+id/txt_visit_product"
                     android:gravity="center_vertical"
                     android:layout_marginStart="3dp"
                     android:layout_marginEnd="8dp"
