--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="text_size_very_small">10sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
     <dimen name="standard_elevation">6dp</dimen>
+    <dimen name="margin_itemshow_product">4dp</dimen>
 </resources>
