--- a/app/src/main/res/layout/item_show_search.xml
+++ b/app/src/main/res/layout/item_show_search.xml
@@ -32,7 +32,7 @@
             android:layout_height="1dp"
             android:layout_marginRight="@dimen/standard_margin"
             android:layout_marginLeft="@dimen/standard_margin"
-            android:background="#40292424"/>
+            android:background="@color/gray_for_littile_view"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
             android:layout_height="1dp"
             android:layout_marginRight="@dimen/standard_margin"
             android:layout_marginLeft="@dimen/standard_margin"
-            android:background="#40292424"/>
+            android:background="@color/gray_for_littile_view"/>
 
         <!--<LinearLayout-->
             <!--android:layout_marginTop="@dimen/margin_itemshow_product"-->
