--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -109,6 +109,7 @@
                     </android.support.v7.widget.CardView>
                     <android.support.v7.widget.CardView
                         android:layout_width="0dp"
+                        android:id="@+id/card_comments_show_activity"
                         android:layout_margin="@dimen/standard_margin"
                         android:layout_weight=".5"
                         android:elevation="1dp"
@@ -184,7 +185,7 @@
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
-                            android:background="@color/gray"
+                            android:background="@color/gray_for_littile_view"
                             android:layout_marginStart="@dimen/standard_margin"
                             android:layout_marginEnd="@dimen/standard_margin"
                             android:layout_marginTop="@dimen/standard_margin"
@@ -198,6 +199,7 @@
                             <TextView
                                 android:layout_width="0dp"
                                 android:layout_weight=".5"
+                                android:textSize="18sp"
                                 android:textAlignment="center"
                                 android:id="@+id/txt_price_show_activirt"
                                 android:layout_height="wrap_content"
@@ -210,6 +212,7 @@
                                 android:layout_width="0dp"
                                 android:layout_weight=".5"
                                 android:textAlignment="center"
+                                android:textSize="22sp"
                                 android:id="@+id/txt_price_off_show_activirt"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/standard_margin"
@@ -286,7 +289,7 @@
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
-                            android:background="@color/gray"
+                            android:background="@color/gray_for_littile_view"
                             android:layout_marginStart="@dimen/standard_margin"
                             android:layout_marginEnd="@dimen/standard_margin"
                             android:layout_marginTop="@dimen/standard_margin"
@@ -330,6 +333,69 @@
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:id="@+id/specialOffers_lable"
+                    android:layout_height="match_parent">
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="match_parent"
+                        android:background="#272727"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginBottom="12dp"
+                        android:text="@string/similar_products"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        />
+                </LinearLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none"
+                    android:layoutDirection="rtl"
+                    android:id="@+id/recycler_similar"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp">
+                </android.support.v7.widget.RecyclerView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="match_parent"
+                        android:background="#272727"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginBottom="12dp"
+                        android:text="@string/others_buy"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        />
+                </LinearLayout>
+
+
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none"
+                    android:layoutDirection="rtl"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
+                    android:id="@+id/recycler_others">
+                </android.support.v7.widget.RecyclerView>
 
 
 
