--- a/app/src/main/res/layout/item_show_basket.xml
+++ b/app/src/main/res/layout/item_show_basket.xml
@@ -52,7 +52,7 @@
                     android:layout_height="1dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginLeft="15dp"
-                    android:background="#40292424"/>
+                    android:background="@color/gray_for_littile_view"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:textSize="@dimen/text_size_small"
@@ -76,7 +76,7 @@
                     android:layout_height="1dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginLeft="15dp"
-                    android:background="#40292424"/>
+                    android:background="@color/gray_for_littile_view"/>
             </LinearLayout>
 
 
@@ -108,7 +108,7 @@
             android:layout_height="1dp"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:background="#40292424"/>
+            android:background="@color/gray_for_littile_view"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -136,7 +136,7 @@
             android:layout_height="1dp"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:background="#40292424"/>
+            android:background="@color/gray_for_littile_view"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
