--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layoutDirection="rtl"
     android:background="@color/colorPrimaryDarkForNavigation"
     android:gravity="bottom"
@@ -14,12 +15,12 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageView"
+        android:id="@+id/img_circle_nav_header"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginBottom="@dimen/standard_margin"
         android:paddingTop="@dimen/standard_margin"
-        android:src="@drawable/book12" />
+        tools:src="@drawable/book12" />
 
     <TextView
         android:id="@+id/txt_nav_name"
