--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#B91375</color>
-    <color name="colorPrimaryDark">#750450</color>
-    <color name="colorAccent">#16A599</color>
+    <color name="colorPrimary">#00B8D4</color>
+    <color name="colorPrimaryDark">#00B8D4</color>
+    <color name="colorAccent">#13929E</color>
     <color name="green">#29B617</color>
     <color name="black">#000000</color>
     <color name="yellow">#FFFA00</color>
-    <color name="colorPrimaryDarkForNavigation">#D9750450</color>
+    <color name="colorPrimaryDarkForNavigation">#8B00B8D4</color>
     <color name="nav_background">#BF232524</color>
     <color name="gray">#585858</color>
     <color name="gray_light">#D1D0D0</color>
@@ -18,5 +18,6 @@
     <color name="bg_for_itemshow">#ffffff</color>
     <color name="gray_light_for_bg_itemshow">#DADADA</color>
     <color name="gray_light_for_bg_activity">#DADADA</color>
+    <color name="gray_for_littile_view">#7ABEBEBE</color>
 
 </resources>
