--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,18 +11,34 @@
     android:orientation="vertical">
     <include layout="@layout/toolbar_second"
         android:id="@+id/tooolbar"/>
-
     <ScrollView
         android:layout_below="@id/tooolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_below="@id/tooolbar"
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:id="@+id/img_user_register"
+                android:src="@drawable/avatar2"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/txt_image_user_register"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_standard"
+                android:text="@string/get_image"/>
 
 
             <EditText
