--- a/app/src/main/res/layout/item_show_comments.xml
+++ b/app/src/main/res/layout/item_show_comments.xml
@@ -83,8 +83,10 @@
         </LinearLayout>
 
         <RatingBar
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:numStars="5"
             android:id="@+id/rating_comment"/>
 
         <!--<com.willy.ratingbar.ScaleRatingBar-->
