--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -11,6 +11,36 @@
     tools:context=".Activities.CategoryActivity">
     <include layout="@layout/toolbar_second"/>
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:id="@+id/card_filter"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        app:cardElevation="@dimen/standard_elevation"
+        app:cardCornerRadius="2dp"
+        android:layout_margin="@dimen/small_margin"
+        android:layout_height="40dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_margin="@dimen/small_margin"
+            android:layout_height="40dp">
+            <ImageView
+                android:layout_width="30dp"
+                android:src="@drawable/ic_filter_list_black_24dp"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_marginStart="@dimen/small_margin"
+                android:layout_height="wrap_content"
+                android:text=" ترتیب بندی"/>
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/recycler_item"
