--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -82,6 +82,7 @@
                         <ImageView
                             android:layout_width="40dp"
                             android:layout_height="40dp"
+                            android:id="@+id/img_favorite"
                             android:tint="@color/gray"
                             android:layout_margin="@dimen/standard_margin"
                             android:layout_gravity="center"
@@ -320,6 +321,7 @@
                         android:layout_height="match_parent">
                         <TextView
                             android:layout_width="wrap_content"
+                            android:id="@+id/txt_rate"
                             android:layout_height="wrap_content"
                             android:text="3 از 5" />
                         <RatingBar
